deploy/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: avocado-client # jenkins랑만 이름 맞으면 될 듯. 어차피 jenkins의 kustomize에서 이름을 $IMAGE_NAME_CLIENT:$BUILD_NUMBER로 바꿔준다
        imagePullPolicy: Always # 중요한데 간단하진 않아서, 검색해볼 필요가 있음
        ports:
        - containerPort: 3000
        # resources:
        #   limits:
        #     cpu: 500m
        #     memory: 512Mi
        #   requests:
        #     cpu: 250m
        #     memory: 256Mi
