deploy/client/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: client
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
